Fix MySQL UUID generation and database initialization
- Fix UUID() function syntax for MySQL compatibility
- Change server_default from func.uuid() to text('(UUID())')
- Remove manual UUID generation in Python code (let MySQL handle it)
- Create dedicated init_database.py with proper error handling
- Update startup scripts to use new database initialization
- Fix SQLAlchemy 2.0+ compatibility issues

Database should now initialize properly on MySQL 8.0+

--- a/Dockerfile.simple
+++ b/Dockerfile.simple
@@ -53,7 +53,7 @@ fi\n\
 \n\
 # Create database tables\n\
 echo "🔧 Setting up database..."\n\
-python -c "from database import create_tables; create_tables()"\n\
+python init_database.py\n\
 \n\
 # Start application\n\
 echo "🎬 Starting GridTrader Pro..."\n\
