🔧 Fix nginx configuration and improve service stability
- Add proper nginx events and http blocks to fix configuration syntax
- Make FastAPI startup more robust (don't crash on database init errors)
- Improve supervisord configuration with better logging and retry settings
- Add proper nginx logging configuration

These fixes should resolve the nginx FATAL state and gridtrader crashes.

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -10,6 +10,11 @@ autostart=true
 autorestart=true
 stdout_logfile=/app/logs/nginx.log
 stderr_logfile=/app/logs/nginx.log
+redirect_stderr=true
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=5
+startsecs=5
+startretries=3
 
 [program:gridtrader]
 command=python main.py
@@ -20,6 +25,11 @@ autorestart=true
 stdout_logfile=/app/logs/app.log
 stderr_logfile=/app/logs/app.log
 environment=PYTHONPATH="/app"
+redirect_stderr=true
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=5
+startsecs=10
+startretries=3
 
 [program:celery-worker]
 command=celery -A tasks worker --loglevel=info
