--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,7 +1,30 @@
-server {
-    listen 3000;
-    server_name _;
-    client_max_body_size 100M;
+events {
+    worker_connections 1024;
+}
+
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    
+    # Logging
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                    '$status $body_bytes_sent "$http_referer" '
+                    '"$http_user_agent" "$http_x_forwarded_for"';
+    
+    access_log /app/logs/nginx-access.log main;
+    error_log /app/logs/nginx-error.log;
+    
+    # Basic settings
+    sendfile on;
+    tcp_nopush on;
+    tcp_nodelay on;
+    keepalive_timeout 65;
+    types_hash_max_size 2048;
+
+    server {
+        listen 3000;
+        server_name _;
+        client_max_body_size 100M;
     
     # Security headers
     add_header X-Frame-Options "SAMEORIGIN" always;
@@ -82,5 +105,6 @@ server {
     location = /50x.html {
         internal;
         return 500 "Internal server error";
+    }
     }
 }
