🔧 Fix GridTrader application startup issues
- Fix supervisord redirect_stderr warning by separating log files
- Change supervisord command to use uvicorn directly instead of python main.py
- Simplify startup event to prevent database connection crashes
- Remove problematic async database operations from startup

These changes should resolve the exit status 1 crashes and allow the FastAPI app to start successfully.

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -5,15 +5,14 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:gridtrader]
-command=python main.py
+command=uvicorn main:app --host 0.0.0.0 --port 3000 --log-level info
 directory=/app
 user=appuser
 autostart=true
 autorestart=true
 stdout_logfile=/app/logs/app.log
-stderr_logfile=/app/logs/app.log
+stderr_logfile=/app/logs/app-error.log
 environment=PYTHONPATH="/app"
-redirect_stderr=true
 stdout_logfile_maxbytes=10MB
 stdout_logfile_backups=5
 startsecs=10
