--- a/Dockerfile.simple-clean
+++ b/Dockerfile.simple-clean
@@ -39,9 +39,9 @@ RUN chmod +x /start-simple.sh
 EXPOSE 3000
 EXPOSE 8000
 
-# Health check (try both common ports)
+# Health check on port 3000
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD curl -f http://localhost:${PORT:-3000}/health || curl -f http://localhost:3000/health || exit 1
+    CMD curl -f http://localhost:3000/health || exit 1
 
 # Switch to app user
 USER appuser
