--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn[standard]==0.24.0
 mysql-connector-python==8.2.0
 sqlalchemy==2.0.23
 alembic==1.13.0
-yfinance==0.2.65
+yfinance>=0.2.63,<0.3.0
 pandas==2.1.3
 numpy==1.25.2
 plotly==5.17.0
