--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 requests==2.31.0
 aiofiles==23.2.1
-websockets==12.0
+websockets>=13.0
 google-auth==2.24.0
 google-auth-oauthlib==1.1.0
 google-auth-httplib2==0.2.0
