--- a/cursor-mcp-config.json
+++ b/cursor-mcp-config.json
@@ -4,7 +4,7 @@
       "command": "node",
       "args": ["/Users/sdg223157/gridsai_webapp/gridtrader-pro-webapp/mcp-server/dist/index.js"],
       "env": {
-        "GRIDTRADER_API_URL": "http://localhost:3000",
+        "GRIDTRADER_API_URL": "https://gridsai.app",
         "GRIDTRADER_ACCESS_TOKEN": "gridtrader_dev_token_123"
       }
     }
