--- a/mcp-global-config.json
+++ b/mcp-global-config.json
@@ -3,7 +3,7 @@
     "gridtrader-pro": {
       "command": "gridtrader-pro-mcp",
       "env": {
-        "GRIDTRADER_API_URL": "http://localhost:3000",
+        "GRIDTRADER_API_URL": "https://gridsai.app",
         "GRIDTRADER_ACCESS_TOKEN": "{{USER_ACCESS_TOKEN}}"
       }
     }
