--- a/mcp-server/package.json
+++ b/mcp-server/package.json
@@ -45,7 +45,7 @@
     "type": "git",
     "url": "https://github.com/SDG223157/gridtrader-pro-webapp.git"
   },
-  "homepage": "http://localhost:3000",
+  "homepage": "https://gridsai.app",
   "engines": {
     "node": ">=18.0.0"
   }
