Fix remaining main_simple references in deployment configs
- Updated uvicorn import in main.py from main_simple:app to main:app
- Fixed Dockerfile.simple-production to use main.py
- Updated supervisord.conf to use main:app
- Removed remaining main_simple pattern comments
- Resolves deployment import errors
- All configurations now point to single main.py file

--- a/Dockerfile.simple-production
+++ b/Dockerfile.simple-production
@@ -62,7 +62,7 @@ python init_database.py\n\
 \n\
 # Start application directly (no supervisord)\n\
 echo "🎬 Starting GridTrader Pro..."\n\
-exec python main_simple.py' > /start-simple.sh && chmod +x /start-simple.sh
+exec python main.py' > /start-simple.sh && chmod +x /start-simple.sh
 
 # Expose port
 EXPOSE 3000
