--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/var/log/supervisor/supervisord.log
 pidfile=/var/run/supervisord.pid
 
 [program:gridtrader]
-command=uvicorn main_simple:app --host 0.0.0.0 --port 3000 --log-level info
+command=uvicorn main:app --host 0.0.0.0 --port 3000 --log-level info
 directory=/app
 user=appuser
 autostart=true
