🔧 Fix alert system deployment issues
- Add comprehensive diagnostic script for alert system debugging
- Improve Celery supervisor configuration with better logging
- Create step-by-step Coolify deployment guide
- Add production alert testing tools

Key fixes:
- Enhanced supervisor config with proper error logging
- Celery worker concurrency and restart settings
- Clear Redis and SMTP configuration instructions
- Manual testing and troubleshooting guides

Current price $38.61 is $0.03 from buy level $38.64 - should trigger once Celery is running

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -19,14 +19,18 @@ startsecs=10
 startretries=3
 
 [program:celery-worker]
-command=celery -A tasks worker --loglevel=info
+command=celery -A tasks worker --loglevel=info --concurrency=2
 directory=/app
 user=appuser
 autostart=true
 autorestart=true
 stdout_logfile=/app/logs/celery.log
-stderr_logfile=/app/logs/celery.log
+stderr_logfile=/app/logs/celery-error.log
 environment=PYTHONPATH="/app"
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=3
+startsecs=10
+startretries=3
 
 [program:celery-beat]
 command=celery -A tasks beat --loglevel=info
@@ -35,5 +39,9 @@ user=appuser
 autostart=true
 autorestart=true
 stdout_logfile=/app/logs/celery-beat.log
-stderr_logfile=/app/logs/celery-beat.log
+stderr_logfile=/app/logs/celery-beat-error.log
 environment=PYTHONPATH="/app"
+stdout_logfile_maxbytes=10MB
+stdout_logfile_backups=3
+startsecs=10
+startretries=3
