🔧 Fix Celery import error and improve configuration
- Add missing Session import in tasks.py (was causing exit status 2)
- Update supervisord.conf with full Python paths for Celery commands
- Add PATH environment variable to Celery processes
- Create test_celery.py to verify Celery can start correctly

Test shows:
✅ All imports working
✅ 17 Celery tasks registered including monitor_grid_prices_realtime
✅ Redis connection successful
✅ Celery should start correctly now

--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -19,28 +19,28 @@ startsecs=10
 startretries=3
 
 [program:celery-worker]
-command=celery -A tasks worker --loglevel=info --concurrency=2
+command=/usr/local/bin/celery -A tasks worker --loglevel=info --concurrency=2
 directory=/app
 user=appuser
 autostart=true
 autorestart=true
 stdout_logfile=/app/logs/celery.log
 stderr_logfile=/app/logs/celery-error.log
-environment=PYTHONPATH="/app"
+environment=PYTHONPATH="/app",PATH="/usr/local/bin:/usr/bin:/bin"
 stdout_logfile_maxbytes=10MB
 stdout_logfile_backups=3
 startsecs=10
 startretries=3
 
 [program:celery-beat]
-command=celery -A tasks beat --loglevel=info
+command=/usr/local/bin/celery -A tasks beat --loglevel=info
 directory=/app
 user=appuser
 autostart=true
 autorestart=true
 stdout_logfile=/app/logs/celery-beat.log
 stderr_logfile=/app/logs/celery-beat-error.log
-environment=PYTHONPATH="/app"
+environment=PYTHONPATH="/app",PATH="/usr/local/bin:/usr/bin:/bin"
 stdout_logfile_maxbytes=10MB
 stdout_logfile_backups=3
 startsecs=10
